--- a/temples.html
+++ b/temples.html
@@ -15,7 +15,7 @@
     <title>Temple Album | Church of Jesus Christ of Latter-Day Saints</title>
 </head>
 <body>
-    <button type="button" id="menu-button"></button>
+    <button type="button" id="menu-button" aria-label="Open menu"></button>
     <header>
         <h1>Temple Album</h1>
         <nav class="navigation">
