--- a/temples.html
+++ b/temples.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
+        <h2>Temples</h2>
         <div class="image-grid">
             <figure>
                 <img src="images/aba-nigeria-temple.jpg" alt="aba nigeria temple" class="grid-img1">
