--- a/temples.html
+++ b/temples.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My name is Gift Ndoma. This is the WDD 131 - Dynamic web fundamentals course taken to enhance my HTML CSS and learc Javascripts skills in programming. This page is a student homepage created to practice HTML, CSS and Javascript.">
     <meta name="author" content="Gift Ndoma">
-    <link rel="stylesheet" href="styles/temple.css">
-    <link rel="stylesheet" href="styles/temple-large.css">
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
