--- a/place.html
+++ b/place.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My name is Gift Ndoma. This is the WDD 131 - Dynamic web fundamentals course taken to enhance my HTML CSS and learc Javascripts skills in programming. This page is a student homepage created to practice HTML, CSS and Javascript.">
+    <meta name="author" content="Gift Ndoma">
     <title>My Country | Webpage | WDD 131</title>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
