--- a/form.html
+++ b/form.html
@@ -51,7 +51,7 @@
             <div class="optional">
                 <label class="review" for="review">Written Review <span class="optional">(Optional)</span></label>
                 <textarea id="review" name="review"></textarea>
-                <label for="name" class="fname">Your Name <span class="optional">(Optional)</span></label>
+                <label for="fname" class="name">Your Name <span class="optional">(Optional)</span></label>
                 <input type="text" id="fname" name="full-name">
                 <input type="submit" value="Post Review">
             </div>
