--- a/course-project/index.html
+++ b/course-project/index.html
@@ -15,18 +15,17 @@
     <header>
         <h1>BYU Remote Learning Hub</h1>
         <nav>
-            <a href="project.html">Home</a>
-            <a href="study-tips.html" target="_blank">Study Tips</a>
-            <a href="assignment.html" target="_blank">Assignment</a>
-            <a href="resources.html" target="_blank">Resources</a>
+            <a href="index.html">Home</a>
+            <a href="study-tips.html">Study Tips</a>
+            <a href="resources.html">Resources</a>
         </nav>
     </header>
     <main>
         <section class="welcome">
             <picture>
-                <source media="(min-width: 700px)" srcset="images/students-large.jpg">
-                <source media="(max-width: 699px)" srcset="images/hero-image.jpg">
-                <img src="images/hero_img.jpg" alt="Student studying">
+                <source media="(min-width: 700px)" srcset="images/students-large.webp">
+                <source media="(max-width: 699px)" srcset="images/hero-image.webp">
+                <img src="images/hero_img.jpg" alt="Student studying" loading="lazy">
             </picture>
             <div class="welcome-msg">
                 <h2>Welcome, BYU Students!</h2>
