--- a/course-project/index.html
+++ b/course-project/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My name is Gift Ndoma. This is the WDD 131 - Dynamic web fundamentals course taken to enhance my HTML CSS and learc Javascripts skills in programming. This page is a student homepage created to practice HTML, CSS and Javascript.">
+    <meta name="author" content="Gift Ndoma">
     <title>BYU Remote Learning Hub | WDD 131 Final Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
