--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -57,11 +57,11 @@
         <div class="wireframe">  
             <h2>Wireframe</h2>
             <p>Destop Version</p>
-            <img src="images/wireframe-desktop.png">
+            <img src="images/wireframe-desktop.png" alt="destop wireframe">
         </div>
         <div class="mobile">
             <p>Mobile version</p>
-            <img src="images/mobile-wireframe.png">
+            <img src="images/mobile-wireframe.png" alt="mobile wireframe">
         </div>
     </main>
     <footer>
