--- a/course-project/index.html
+++ b/course-project/index.html
@@ -27,7 +27,7 @@
             <picture>
                 <source media="(min-width: 700px)" srcset="images/students-large.webp">
                 <source media="(max-width: 699px)" srcset="images/hero-image.webp">
-                <img src="images/hero_img.jpg" alt="Student studying" width="1000" height="900">
+                <img src="images/hero_img.jpg" alt="Student studying" width="1000" height="900" loading="lazy">
             </picture>
             <div class="welcome-msg">
                 <h2>Welcome, BYU Students!</h2>
